--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "welbex",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,6 +8,8 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+
+
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
